styles.css
/* ===============================
   GLOBAL STYLES
================================= */

/* Reset default spacing */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    cursor: none !important;
}

/*removes ugly default cursor*/

/* html */
html {
    scroll-behavior: smooth;
}

/* Body styling */
body {
    font-family: 'Playfair Display', serif;
    background: linear-gradient(135deg, #fff0f5, #ffe4ec);
    color: #5e4b56;
    overflow-x: hidden;
}

/* Accent handwritten titles */
.logo {
    font-family: 'Dancing Script', cursive;
    padding-bottom: 20px;
    font-size: 30px;
}

.section-title {
    font-family: 'Dancing Script', cursive;
    font-size: 2.2rem;
    margin-bottom: 40px;
    position: relative;
    display: inline-block;
}

/*Line at bottom of titles*/
.section-title::after {
    content: "";
    display: block;
    width: 40%;
    height: 2px;
    margin: 10px auto 0;
    background: linear-gradient(to right, #f8cdda, #eeb8cc);
    border-radius: 2px;
}

/* Section layout */
.section {
    padding: 100px 10% 0;
    margin-bottom: 0px;
    text-align: center;
}

/* Color of the external links*/

a {
    color: #d48ca7;
    text-decoration: none;
}

/* ===============================
   NAVIGATION
================================= */
/* Header logo hidden at top */
.header-logo {
    opacity: 0;
    transform: translateY(-10px);
    transition: all 0.4s ease;
    pointer-events: none;
}
/*When scrolled*/
.header-logo.visible{
    opacity: 1;
    transform: translateY(0);
    pointer-events: none;
}

header {
    position: fixed;
    width: 100%;
    top: 0;
    background: rgba(255, 240, 245, 0.7);
    backdrop-filter: blur(10px);
    z-index: 1000;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 10%;
}

.nav-links {
    list-style: none;
    display: flex;
    gap: 20px;
}

.nav-links a {
    text-decoration: none;
    color: #5e4b56;
    transition: 0.3s;
}

/* Soft glow hover */
.nav-links a:hover {
    color: #d48ca7;
    text-shadow: 0 0 8px #f8cdda;
}

/* ===============================
   HERO SECTION
================================= */
.hero::before {
    content: "";
    position: absolute;
    inset: 0;

    background: radial-gradient(
        circle at center,
        rgba(243, 181, 200, 0.589) 0%,
        rgba(255, 240, 245, 0.2) 40%,
        transparent 70%
    );

    pointer-events: none;
    z-index: -1;
}

.hero-name {
    font-size: 3.5rem;
    font-family: 'Dancing Script', cursive;
    transition: transform 0.2s ease;
}

.hero {
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    z-index: 2;
    position: relative;

}

.hero h2 {
    font-size: 3rem;
    font-family: 'Dancing Script', cursive;
}

.hero p {
    font-size: 1.2rem;
    margin-top: 10px;
}

/* ===============================
   ABOUT
================================= */
.about-text {
    max-width: 700px;
    margin: 0 auto;
    font-size: 1.1rem;
    line-height: 1.8;
    color: #6a5560;
    justify-content: flex-start;
}

.about-text p {
    margin-bottom: 20px;
    font-weight: 400;
}

.about-text p:first-child {
    font-size: 1.3rem;
    font-weight: 500;
    color: #d48ca7;
}

.about-highlight {
    display: inline-block;
    transition: transform 0.3s ease, color 0.3s ease;
    font-weight: 500;
}

.about-highlight:hover {
    transform: scale(1.025);
    color: #b76b87;
}

/* ===============================
   PROJECTS
================================= */

.project-card {
    background: rgba(255,255,255,0.6);
    border-radius: 20px;
    padding: 20px;
    margin: 20px auto;
    margin-bottom: 50px;
    max-width: 600px;
    box-shadow: 0 8px 20px rgba(255, 192, 203, 0.3);
    transition: 0.4s;
}

.project-card:hover {
    transform: translateY(-5px);
    box-shadow: 0 12px 25px rgba(255, 182, 193, 0.5);
}

.project-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.project-content {
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.5s ease;
}

.project-card.active .project-content {
    max-height: 300px;
    margin-top: 15px;
}

.toggle-btn {
    background: #f8cdda;
    border: none;
    padding: 8px 15px;
    border-radius: 20px;
    transition: 0.5s;
    color: #5e4b56;
    font-weight: bold;
}

.toggle-btn:hover {
    background: #f5a9c4;
}


/* ===============================
   SKILLS
================================= */

.skills-container {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 40px;
    max-width: 800px;
    margin: 0 auto;
    text-align: left;
}

.skills-category {
    background: linear-gradient(
        145deg,
        rgba(252, 240, 244, 0.726),
        rgba(241, 218, 225, 0.4)
    );
    padding: 25px;
    border-radius: 20px;
    box-shadow: 0 12px 30px rgba(207, 152, 173, 0.18);
    transition: transform 0.3s ease;
    overflow: visible;
}

.skills-category h3 {
    font-family: 'Playfair Display', serif;
    margin-bottom: 30px;
    color: #d48ca7;
}

.skills-category ul {
    list-style: none;
    padding: 0;
}

.skills-category li {
    margin-bottom: 30px;
    margin-left: 30px;
    padding: 8px 12px;
    background: #fcd8e3;
    border-radius: 15px;
    box-shadow: 0 5px 10px rgba(255, 192, 203, 0.3);
    display: inline-block;
}

/*tooltip*/
.tooltip {
    position: relative;
    transition: transform 0.2s ease;
}

/* Tooltip box */
.tooltip-text {
    position: absolute;
    bottom: 140%;
    left: 50%;
    transform: translateX(-50%) translateY(10px);
    
    background: linear-gradient(
    145deg,
    #d48ca7,
    #b76b87
    );
    color: #ffffff;
    
    padding: 10px 14px;
    border-radius: 12px;
    font-size: 0.9rem;
    line-height: 1.4;
    width: 220px;
    text-align: center;

    box-shadow: 0 10px 25px rgba(161, 161, 161, 0.15);
    backdrop-filter: blur(6px);

    opacity: 0;
    visibility: hidden;
    transition: all 0.25s ease;
}

/* Small arrow */
.tooltip-text::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    transform: translateX(-50%);
    
    border-width: 6px;
    border-style: solid;
    border-color: #b76b87 transparent transparent transparent;
}

.tooltip:hover{
    transform: scale(1.05);
}

/* Show animation */
.tooltip:hover .tooltip-text {
    opacity: 1;
    visibility: visible;
    transform: translateX(-50%) translateY(0);
}

/* ===============================
   experience
================================= */

.experience-text{
    max-width: 700px;
    margin: 0 auto;
    font-size: 1.1rem;
    line-height: 1.8;
    color: #6a5560;
    text-align: justify;
    justify-content: flex-start;
}

.experience-text p {
    margin-bottom: 20px;
    font-weight: 400;
}

/* ===============================
   FOOTER
================================= */

footer {
    padding: 20px;
    text-align: center;
    background: #ffe4ec;
}

/* ===============================
   FADE IN ANIMATION
================================= */

.fade-in {
    opacity: 0;
    transform: translateY(30px);
    transition: all 1s ease;
}

.fade-in.visible {
    opacity: 1;
    transform: translateY(0);
}

/* ===============================
   CUSTOM CURSOR
================================= */

.custom-cursor {
    width: 20px;
    height: 20px;
    background: rgba(255, 182, 193, 0.6);
    border-radius: 50%;
    position: fixed;
    pointer-events: none;
    transform: translate(-50%, -50%);
    transition: transform 0.1s ease;
    backdrop-filter: blur(3px);
    z-index: 9999;
    mix-blend-mode: multiply;
}

.custom-cursor.hover {
    transform: translate(-50%, -50%) scale(1.2);
    background: rgba(245, 160, 191, 0.733);
}

/* ===============================
   PARTICLES
================================= */

.particles span {
    position: fixed;
    width: 10px;
    height: 10px;
    background: #f8cdda;
    border-radius: 50%;
    opacity: 0.6;
    animation: float 10s linear infinite;
    pointer-events: none;
    z-index: 0;
}

@keyframes float {
    from {
        transform: translateY(100vh);
    }
    to {
        transform: translateY(-10vh);
    }
}

/* ===============================
   RESPONSIVE DESIGN
================================= */

@media (max-width: 768px) {

    nav {
        flex-direction: column;
        align-items: center;
        gap: 15px;
    }

    .nav-links {
        flex-wrap: wrap;
        justify-content: center;
        gap: 15px;
    }

    .hero h2 {
        font-size: 2rem;
    }

    .section {
        padding: 60px 5%;
    }

        .skills-container {
        grid-template-columns: 1fr;
        text-align: center;
    }

    .skills-category li {
        display: inline-block;
    }

}

